--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- x-icon -->
-    <link rel="shortcut icon" href="assets/css/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/css/favicon.png" type="image/x-icon">
 
     <!-- Other css -->
     <link rel="stylesheet" href="assets/css/animate.css">
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="assets/css/lightcase.css">
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>Alguaciles</title>
+    <title>Sabraplas</title>
 </head>
 
 <body>
@@ -43,11 +43,11 @@
                             <ul>
                                 <li>
                                     <img src="assets/images/header/icon/05.png" alt="icon" />
-                                    <span>Av. Francisco Bilbao Nº2934, Providencia</span>
+                                    <span>Salesianos 725, San Miguel, Santiago, Chile</span>
                                 </li>
                                 <li>
                                     <img src="assets/images/header/icon/04.png" alt="icon" />
-                                    <span>(56 2) 269 93 63 - (56 2) 225 17 58</span>
+                                    <span>(56 9) 32302270</span>
                                 </li>
                             </ul>
                         </div>
@@ -55,10 +55,10 @@
                     <div class="col-xl-4 col-12">
                         <div class="social text-xl-end">
                             <ul>
-                                <!-- <li><a href="#">facebook</a></li>
-                                <li><a href="#">linkdin</a></li>-->
-                                <li><a href="https://www.carabineros.cl/" target="_blank"><img src="assets/css/favicon.ico" alt="icon" />Carabineros</a></li>
-                                <li><a href="https://www.alguaciles.cl/intranet/login" target="_blank">Acceso Alguaciles</a></li>
+                                <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -71,7 +71,7 @@
                     <div class="row align-items-center">
                         <div class="col-xl-2 col-12">
                             <div class="logo">
-                                <a href="index.html"><img src="assets/images/header/logo/logo-alguaciles.png" alt="logo" /></a>
+                                <a href="index.html"><img src="assets/images/header/logo/logo-sabraplas.png" alt="logo" /></a>
                             </div>
                         </div>
                         <div class="col-xl-10 col-12">
@@ -84,7 +84,7 @@
                                         <li>
                                             <a href="quienes_somos.html">Quienes Somos</a>
                                         </li>
-                                        <li>
+                                        <!-- <li>
                                             <a href="#0">Directorio</a>
                                             <ul>
                                                 <li><a href="directorio_directiva.html" class="active">Directiva</a></li>
@@ -92,12 +92,12 @@
                                                 <li><a href="directorio_tribunal_honor.html">Tribunal de Honor</a></li>
                                                 <li><a href="directorio_relacionadores_zonales.html">Relacionadores Zonales</a></li>
                                             </ul>
+                                        </li> -->
+                                        <li>
+                                            <a href="productos.html">Productos</a>
                                         </li>
                                         <li>
-                                            <a href="eventos_actividades.html">Noticias</a>
-                                        </li>
-                                        <li>
-                                            <a href="nombres_fotos.html">Memorial</a>
+                                            <a href="noticias.html">Noticias</a>
                                         </li>
                                         <li><a href="contact.html">Contactenos</a></li>
                                         <li><a href="mapa_sitio.html">Mapa del Sitio</a></li>
@@ -130,7 +130,7 @@
     <div class="banner__slider__one overflow-hidden">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-                <div class="banner bg-img" style="background-image: url(assets/images/banner/bg/alguaciles_1.jpeg);">
+                <div class="banner bg-img" style="background-image: url(assets/images/banner/bg/sabraplas.png);">
                     <div class="banner__one">
                         <div class="container">
                             <div class="banner__area">
@@ -138,9 +138,9 @@
                                     <div class="col-xl-6 col-lg-9 col-12">
                                         <div class="banner__content">
                                             <!-- <h6>Innovative business solution</h6> -->
-                                            <h2>En homenaje a los hombres y mujeres Carabineros y sus familias.</h2>
+                                            <h2>Fabricación de productos plásticos tales como mangas y bolsas plásticas,</h2>
                                             <div class="banner__btngroup">
-                                                <a href="#" class="lab-btn">Ver evento</a>
+                                                <a href="productos.html" class="lab-btn">Ver productos</a>
                                                 <!-- <a href="https://www.youtube.com/embed/YjhrligRTbE" data-rel="lightcase" class="video__btn">
                                                     <i class="fa-solid fa-circle-play"></i>
                                                     <span>How we work</span>
@@ -154,7 +154,7 @@
                     </div>
                 </div>
             </div>
-            <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
                 <div class="banner bg-img" style="background-image: url(assets/images/banner/bg/noticia1.jpeg);">
                     <div class="banner__one">
                         <div class="container">
@@ -162,14 +162,14 @@
                                 <div class="row">
                                     <div class="col-xl-6 col-lg-9 col-12">
                                         <div class="banner__content">
-                                            <!-- <h6>Innovative business solution</h6> -->
-                                            <h2>En homenaje a los hombres y mujeres Carabineros y sus familias.</h2>
+                                            <h6>Innovative business solution</h6> -->
+                                           <!-- <h2>En homenaje a los hombres y mujeres Carabineros y sus familias.</h2>
                                             <div class="banner__btngroup">
                                                 <a href="#" class="lab-btn">Ver evento</a>
-                                                <!-- <a href="https://www.youtube.com/embed/YjhrligRTbE" data-rel="lightcase" class="video__btn">
+                                                 <a href="https://www.youtube.com/embed/YjhrligRTbE" data-rel="lightcase" class="video__btn">
                                                     <i class="fa-solid fa-circle-play"></i>
                                                     <span>How we work</span>
-                                                </a> -->
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
@@ -178,8 +178,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="swiper-slide">
+            </div> -->
+            <!--<div class="swiper-slide">
                 <div class="banner bg-img" style="background-image: url(assets/images/banner/bg/noticia2.jpeg);">
                     <div class="banner__one">
                         <div class="container">
@@ -187,14 +187,14 @@
                                 <div class="row">
                                     <div class="col-xl-6 col-lg-9 col-12">
                                         <div class="banner__content">
-                                            <!-- <h6>Innovative business solution</h6> -->
-                                            <h2>En homenaje a los hombres y mujeres Carabineros y sus familias.</h2>
+                                             <h6>Innovative business solution</h6> -->
+                                            <!--<h2>En homenaje a los hombres y mujeres Carabineros y sus familias.</h2>
                                             <div class="banner__btngroup">
                                                 <a href="#" class="lab-btn">Ver evento</a>
-                                                <!-- <a href="https://www.youtube.com/embed/YjhrligRTbE" data-rel="lightcase" class="video__btn">
+                                                 <a href="https://www.youtube.com/embed/YjhrligRTbE" data-rel="lightcase" class="video__btn">
                                                     <i class="fa-solid fa-circle-play"></i>
                                                     <span>How we work</span>
-                                                </a> -->
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
@@ -203,7 +203,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
             <!--<div class="swiper-slide">
                 <div class="banner bg-img" style="background-image: url(assets/images/banner/bg/noticia1.jpeg);">
                     <div class="banner__one">
@@ -956,12 +956,12 @@
                     <div class="col-lg-3 col-sm-6 col-12">
                         <div class="footer__about">
                             <div class="footer__title">
-                                <h5>Alguaciles Chile</h5>
+                                <h5>Sabraplas</h5>
                             </div>
                             <p>Enthusia drive accuratie users vas tha effective interface nergsticaly purse adaptive cores create rough effectve create nterface.  </p>
                             <ul>
+                                <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
                                 <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
                                 <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                                 <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                             </ul>
@@ -976,12 +976,8 @@
                                 <ul>
                                     <li><a href="index.html" class="active">Inicio</a></li>
                                     <li><a href="quienes_somos.html">Quienes Somos</a></li>
-                                    <li><a href="directorio_directiva.html" class="active">Directiva</a></li>
-                                    <li><a href="directorio_comision_revisora.html">Comisión Revisora de Cuentas</a></li>
-                                    <li><a href="directorio_tribunal_honor.html">Tribunal de Honor</a></li>
-                                    <li><a href="directorio_relacionadores_zonales.html">Relacionadores Zonales</a></li>
-                                    <li><a href="eventos_actividades.html">Noticias</a></li>
-                                    <li><a href="nombres_fotos.html">Memorial</a></li>
+                                    <li><a href="productos.html">Productos</a></li>
+                                    <li><a href="noticias.html">Noticias</a></li>
                                     <li><a href="contact.html">Contactenos</a></li>
                                     <li><a href="mapa_sitio.html">Mapa del Sitio</a></li>
                                 </ul>
