--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- x-icon -->
-    <link rel="shortcut icon" href="assets/css/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/css/favicon.png" type="image/x-icon">
 
     <!-- Other css -->
     <link rel="stylesheet" href="assets/css/animate.css">
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="assets/css/lightcase.css">
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>Alguaciles</title>
+    <title>Sabraplas</title>
 </head>
 
 <body>
@@ -43,12 +43,11 @@
                             <ul>
                                 <li>
                                     <img src="assets/images/header/icon/05.png" alt="icon" />
-                                    <span>Av. Francisco Bilbao Nº2934, Providencia</span>
+                                    <span>Salesianos 725, San Miguel, Santiago, Chile</span>
                                 </li>
                                 <li>
                                     <img src="assets/images/header/icon/04.png" alt="icon" />
-                                    <span>(56 2) 269 93 63 - (56 2) 225 17 58</span>
-
+                                    <span>(56 9) 32302270</span>
                                 </li>
                             </ul>
                         </div>
@@ -56,10 +55,10 @@
                     <div class="col-xl-4 col-12">
                         <div class="social text-xl-end">
                             <ul>
-                                <!-- <li><a href="#">facebook</a></li>
-                                <li><a href="#">linkdin</a></li>-->
-                                <li><a href="https://www.carabineros.cl/" target="_blank"><img src="assets/css/favicon.ico" alt="icon" />Carabineros</a></li>
-                                <li><a href="https://www.alguaciles.cl/intranet/login" target="_blank">Acceso Alguaciles</a></li>
+                                <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -71,7 +70,7 @@
                 <div class="area">
                     <div class="col-xl-2 col-12">
                         <div class="logo">
-                            <a href="index.html"><img src="assets/images/header/logo/logo-alguaciles.png" alt="logo" /></a>
+                            <a href="index.html"><img src="assets/images/header/logo/sabraplas.png" alt="logo" /></a>
                         </div>
                     </div>
                     <div class="col-xl-10 col-12">
@@ -84,7 +83,7 @@
                                     <li>
                                         <a href="quienes_somos.html">Quienes Somos</a>
                                     </li>
-                                    <li>
+                                    <!-- <li>
                                         <a href="#0">Directorio</a>
                                         <ul>
                                             <li><a href="directorio_directiva.html" class="active">Directiva</a></li>
@@ -92,12 +91,12 @@
                                             <li><a href="directorio_tribunal_honor.html">Tribunal de Honor</a></li>
                                             <li><a href="directorio_relacionadores_zonales.html">Relacionadores Zonales</a></li>
                                         </ul>
+                                    </li> -->
+                                    <li>
+                                        <a href="productos.html">Productos</a>
                                     </li>
                                     <li>
-                                        <a href="eventos_actividades.html">Noticias</a>
-                                    </li>
-                                    <li>
-                                        <a href="nombres_fotos.html">Memorial</a>
+                                        <a href="noticias.html">Noticias</a>
                                     </li>
                                     <li><a href="contact.html" class="active">Contactenos</a></li>
                                     <li><a href="mapa_sitio.html">Mapa del Sitio</a></li>
@@ -159,7 +158,7 @@
                             <div class="information__content">
                                 <h5>Dirección</h5>
                                 <p>
-                                    <a href="https://www.google.com/maps/place/Av.+Francisco+Bilbao+2934,+Providencia,+Regi%C3%B3n+Metropolitana/@-33.4349297,-70.591914,17z/data=!3m1!4b1!4m6!3m5!1s0x9662cf09ccf88511:0xc5b0f868ae73bcf4!8m2!3d-33.4349342!4d-70.5893391!16s%2Fg%2F11dzq4myfq" target="_blank">
+                                    <a href="https://www.google.com/maps/place/Av.+Salesianos+725,+8900226+San+Miguel,+Regi%C3%B3n+Metropolitana/@-33.4942989,-70.6431258,17z/data=!3m1!4b1!4m6!3m5!1s0x9662dab666fc715b:0xa0ac2578caf4214d!8m2!3d-33.4942989!4d-70.6431258!16s%2Fg%2F11gr7t8k7b?entry=ttu" target="_blank">
                                         Av. Francisco Bilbao Nº2934, Providencia
                                     </a>
                                 </p>
@@ -173,7 +172,7 @@
                             </div>
                             <div class="information__content">
                                 <h5>Email</h5>
-                                <p><a href = "mailto: secretaria@alguaciles.cl">secretaria@alguaciles.cl</a></p><br />
+                                <p><a href = "mailto: ventas@sabraplas.cl">ventas@sabraplas.cl</a></p><br />
                             </div>
                         </div>
                     </div>
@@ -184,7 +183,7 @@
                             </div>
                             <div class="information__content">
                                 <h5>Teléfono</h5>
-                                <p><a href="tel:+5622699363">(56 2) 269 93 63</a> <br /> <a href="tel:+5622251758">(56 2) 225 17 58</a></p>
+                                <p><a href="tel:+56932302270">(56 9) 32302270</a></p>
                             </div>
                         </div>
                     </div>
@@ -195,7 +194,7 @@
                             </div>
                             <div class="information__content">
                                 <h5>Horario</h5>
-                                <p>Lunes - Viernes <br /> 9:00am - 5:00pm</p>
+                                <p>Lunes - Viernes <br /> 8:30am a 14:00 - 15:00 a 16:30pm</p>
                             </div>
                         </div>
                     </div>
@@ -257,12 +256,12 @@
                     <div class="col-lg-3 col-sm-6 col-12">
                         <div class="footer__about">
                             <div class="footer__title">
-                                <h5>Alguaciles Chile</h5>
+                                <h5>Sabraplas</h5>
                             </div>
                             <p>Enthusia drive accuratie users vas tha effective interface nergsticaly purse adaptive cores create rough effectve create nterface.  </p>
                             <ul>
+                                <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
                                 <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
                                 <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                                 <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                             </ul>
@@ -275,15 +274,11 @@
                             </div>
                             <div class="footer__wrapper">
                                 <ul>
-                                    <li><a href="index.html" class="active">Inicio</a></li>
+                                    <li><a href="index.html">Inicio</a></li>
                                     <li><a href="quienes_somos.html">Quienes Somos</a></li>
-                                    <li><a href="directorio_directiva.html" class="active">Directiva</a></li>
-                                    <li><a href="directorio_comision_revisora.html">Comisión Revisora de Cuentas</a></li>
-                                    <li><a href="directorio_tribunal_honor.html">Tribunal de Honor</a></li>
-                                    <li><a href="directorio_relacionadores_zonales.html">Relacionadores Zonales</a></li>
-                                    <li><a href="eventos_actividades.html">Noticias</a></li>
-                                    <li><a href="nombres_fotos.html">Memorial</a></li>
-                                    <li><a href="contact.html">Contactenos</a></li>
+                                    <li><a href="productos.html">Productos</a></li>
+                                    <li><a href="noticias.html">Noticias</a></li>
+                                    <li><a href="contact.html" class="active">Contactenos</a></li>
                                     <li><a href="mapa_sitio.html">Mapa del Sitio</a></li>
                                 </ul>
                             </div>
