--- a/productos.html
+++ b/productos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- x-icon -->
-    <link rel="shortcut icon" href="assets/css/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/css/favicon.png" type="image/x-icon">
 
     <!-- Other css -->
     <link rel="stylesheet" href="assets/css/animate.css">
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="assets/css/lightcase.css">
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>Alguaciles</title>
+    <title>Sabraplas</title>
 </head>
 
 <body>
@@ -43,11 +43,11 @@
                             <ul>
                                 <li>
                                     <img src="assets/images/header/icon/05.png" alt="icon" />
-                                    <span>Av. Francisco Bilbao Nº2934, Providencia</span>
+                                    <span>Salesianos 725, San Miguel, Santiago, Chile</span>
                                 </li>
                                 <li>
                                     <img src="assets/images/header/icon/04.png" alt="icon" />
-                                    <span>(56 2) 269 93 63 - (56 2) 225 17 58</span>
+                                    <span>(56 9) 32302270</span>
                                 </li>
                             </ul>
                         </div>
@@ -55,10 +55,10 @@
                     <div class="col-xl-4 col-12">
                         <div class="social text-xl-end">
                             <ul>
-                                <!-- <li><a href="#">facebook</a></li>
-                                <li><a href="#">linkdin</a></li>-->
-                                <li><a href="https://www.carabineros.cl/" target="_blank"><img src="assets/css/favicon.ico" alt="icon" />Carabineros</a></li>
-                                <li><a href="https://www.alguaciles.cl/intranet/login" target="_blank">Acceso Alguaciles</a></li>
+                                <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -70,7 +70,7 @@
                 <div class="area">
                     <div class="col-xl-2 col-12">
                         <div class="logo">
-                            <a href="index.html"><img src="assets/images/header/logo/logo-alguaciles.png" alt="logo" /></a>
+                            <a href="index.html"><img src="assets/images/header/logo/sabraplas.png" alt="logo" /></a>
                         </div>
                     </div>
                     <div class="col-xl-10 col-12">
@@ -78,12 +78,12 @@
                             <div class="menu">
                                 <ul>
                                     <li>
-                                        <a href="index.html" class="active">Inicio</a>
+                                        <a href="index.html">Inicio</a>
                                     </li>
                                     <li>
                                         <a href="quienes_somos.html">Quienes Somos</a>
                                     </li>
-                                    <li>
+                                    <!-- <li>
                                         <a href="#0">Directorio</a>
                                         <ul>
                                             <li><a href="directorio_directiva.html" class="active">Directiva</a></li>
@@ -91,12 +91,12 @@
                                             <li><a href="directorio_tribunal_honor.html">Tribunal de Honor</a></li>
                                             <li><a href="directorio_relacionadores_zonales.html">Relacionadores Zonales</a></li>
                                         </ul>
+                                    </li> -->
+                                    <li>
+                                        <a href="productos.html" class="active">Productos</a>
                                     </li>
                                     <li>
-                                        <a href="eventos_actividades.html">Noticias</a>
-                                    </li>
-                                    <li>
-                                        <a href="nombres_fotos.html">Memorial</a>
+                                        <a href="noticias.html">Noticias</a>
                                     </li>
                                     <li><a href="contact.html">Contactenos</a></li>
                                     <li><a href="mapa_sitio.html">Mapa del Sitio</a></li>
@@ -371,12 +371,12 @@
                     <div class="col-lg-3 col-sm-6 col-12">
                         <div class="footer__about">
                             <div class="footer__title">
-                                <h5>Alguaciles Chile</h5>
+                                <h5>Sabraplas</h5>
                             </div>
                             <p>Enthusia drive accuratie users vas tha effective interface nergsticaly purse adaptive cores create rough effectve create nterface.  </p>
                             <ul>
+                                <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
                                 <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
                                 <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                                 <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                             </ul>
@@ -389,14 +389,10 @@
                             </div>
                             <div class="footer__wrapper">
                                 <ul>
-                                    <li><a href="index.html" class="active">Inicio</a></li>
+                                    <li><a href="index.html">Inicio</a></li>
                                     <li><a href="quienes_somos.html">Quienes Somos</a></li>
-                                    <li><a href="directorio_directiva.html" class="active">Directiva</a></li>
-                                    <li><a href="directorio_comision_revisora.html">Comisión Revisora de Cuentas</a></li>
-                                    <li><a href="directorio_tribunal_honor.html">Tribunal de Honor</a></li>
-                                    <li><a href="directorio_relacionadores_zonales.html">Relacionadores Zonales</a></li>
-                                    <li><a href="eventos_actividades.html">Noticias</a></li>
-                                    <li><a href="nombres_fotos.html">Memorial</a></li>
+                                    <li><a href="productos.html" class="active">Productos</a></li>
+                                    <li><a href="noticias.html">Noticias</a></li>
                                     <li><a href="contact.html">Contactenos</a></li>
                                     <li><a href="mapa_sitio.html">Mapa del Sitio</a></li>
                                 </ul>
