--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -486,7 +486,7 @@
         <div class="footer__bottom">
             <div class="container">
                 <div class="footer__copytext text-center">
-                    <p>&copy; 2023 <a href="index.html">Alguaciles</a>. All rights reserved.</p>
+                    <p>&copy; 2023 <a href="index.html">Sabraplas</a>. All rights reserved.</p>
                 </div>
             </div>
         </div>
