--- a/productos.html
+++ b/productos.html
@@ -132,7 +132,7 @@
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Memorial</li>
+                        <li class="breadcrumb-item active" aria-current="page">Productos</li>
                     </ol>
                 </nav>
             </div>
