--- a/productos.html
+++ b/productos.html
@@ -128,7 +128,7 @@
     <div class="pageheader">
         <div class="container">
             <div class="pageheader__content">
-                <h2>Memorial</h2>
+                <h2>Productos</h2>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
