--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="col-xl-4 col-12">
                         <div class="social text-xl-end">
                             <ul>
-                                <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+                                <li><a href="https://wa.me/56991769218?text=I'm%20inquiring%20about%20the%20apartment%20listing"><i class="fa-brands fa-whatsapp"></i></a></li>
                                 <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
                                 <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                                 <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
