--- a/mapa_sitio.html
+++ b/mapa_sitio.html
@@ -147,8 +147,7 @@
     <div class="faq padding-tb">
         <div class="container">
             <div class="section__header text-center">
-                <h6>Popular Questions</h6>
-                <h2>Solutions That Differentiate You</h2>
+                <h2>Mapa del Sitio</h2>
             </div>
             <div class="section__wrapper">
                 <div class="row g-4">
