--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
                                     <div class="col-xl-6 col-lg-9 col-12">
                                         <div class="banner__content">
                                             <!-- <h6>Innovative business solution</h6> -->
-                                            <h2>Fabricación de productos plásticos tales como mangas y bolsas plásticas,</h2>
+                                            <!-- <h2>Fabricación de productos plásticos tales como mangas y bolsas plásticas,</h2> -->
                                             <div class="banner__btngroup">
-                                                <a href="productos.html" class="lab-btn">Ver productos</a>
+                                                <!-- <a href="productos.html" class="lab-btn">Ver productos</a> -->
                                                 <!-- <a href="https://www.youtube.com/embed/YjhrligRTbE" data-rel="lightcase" class="video__btn">
                                                     <i class="fa-solid fa-circle-play"></i>
                                                     <span>How we work</span>
@@ -154,22 +154,22 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="swiper-slide">
-                <div class="banner bg-img" style="background-image: url(assets/images/banner/bg/noticia1.jpeg);">
+            <div class="swiper-slide">
+                <div class="banner bg-img" style="background-image: url(assets/images/banner/bg/Fachada2.jpg);">
                     <div class="banner__one">
                         <div class="container">
                             <div class="banner__area">
                                 <div class="row">
                                     <div class="col-xl-6 col-lg-9 col-12">
                                         <div class="banner__content">
-                                            <h6>Innovative business solution</h6> -->
-                                           <!-- <h2>En homenaje a los hombres y mujeres Carabineros y sus familias.</h2>
+                                             <!--<h6>Innovative business solution</h6> -->
+                                            <!-- <h2>En homenaje a los hombres y mujeres Carabineros y sus familias.</h2> -->
                                             <div class="banner__btngroup">
-                                                <a href="#" class="lab-btn">Ver evento</a>
-                                                 <a href="https://www.youtube.com/embed/YjhrligRTbE" data-rel="lightcase" class="video__btn">
+                                                <!-- <a href="#" class="lab-btn">Ver evento</a> -->
+                                                 <!--<a href="https://www.youtube.com/embed/YjhrligRTbE" data-rel="lightcase" class="video__btn">
                                                     <i class="fa-solid fa-circle-play"></i>
                                                     <span>How we work</span>
-                                                </a>
+                                                </a>-->
                                             </div>
                                         </div>
                                     </div>
@@ -178,7 +178,57 @@
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
+            <div class="swiper-slide">
+                <div class="banner bg-img" style="background-image: url(assets/images/banner/bg/Fachada3.jpg);">
+                    <div class="banner__one">
+                        <div class="container">
+                            <div class="banner__area">
+                                <div class="row">
+                                    <div class="col-xl-6 col-lg-9 col-12">
+                                        <div class="banner__content">
+                                             <!--<h6>Innovative business solution</h6> -->
+                                            <!-- <h2>En homenaje a los hombres y mujeres Carabineros y sus familias.</h2> -->
+                                            <div class="banner__btngroup">
+                                                <!-- <a href="#" class="lab-btn">Ver evento</a> -->
+                                                 <!--<a href="https://www.youtube.com/embed/YjhrligRTbE" data-rel="lightcase" class="video__btn">
+                                                    <i class="fa-solid fa-circle-play"></i>
+                                                    <span>How we work</span>
+                                                </a>-->
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="banner bg-img" style="background-image: url(assets/images/banner/bg/Fachada4.jpg);">
+                    <div class="banner__one">
+                        <div class="container">
+                            <div class="banner__area">
+                                <div class="row">
+                                    <div class="col-xl-6 col-lg-9 col-12">
+                                        <div class="banner__content">
+                                             <!--<h6>Innovative business solution</h6> -->
+                                            <!-- <h2>En homenaje a los hombres y mujeres Carabineros y sus familias.</h2> -->
+                                            <div class="banner__btngroup">
+                                                <!-- <a href="#" class="lab-btn">Ver evento</a> -->
+                                                 <!--<a href="https://www.youtube.com/embed/YjhrligRTbE" data-rel="lightcase" class="video__btn">
+                                                    <i class="fa-solid fa-circle-play"></i>
+                                                    <span>How we work</span>
+                                                </a>-->
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <!--<div class="swiper-slide">
                 <div class="banner bg-img" style="background-image: url(assets/images/banner/bg/noticia2.jpeg);">
                     <div class="banner__one">
