--- a/index.html
+++ b/index.html
@@ -229,81 +229,6 @@
                     </div>
                 </div>
             </div>
-            <!--<div class="swiper-slide">
-                <div class="banner bg-img" style="background-image: url(assets/images/banner/bg/noticia2.jpeg);">
-                    <div class="banner__one">
-                        <div class="container">
-                            <div class="banner__area">
-                                <div class="row">
-                                    <div class="col-xl-6 col-lg-9 col-12">
-                                        <div class="banner__content">
-                                             <h6>Innovative business solution</h6> -->
-                                            <!--<h2>En homenaje a los hombres y mujeres Carabineros y sus familias.</h2>
-                                            <div class="banner__btngroup">
-                                                <a href="#" class="lab-btn">Ver evento</a>
-                                                 <a href="https://www.youtube.com/embed/YjhrligRTbE" data-rel="lightcase" class="video__btn">
-                                                    <i class="fa-solid fa-circle-play"></i>
-                                                    <span>How we work</span>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>-->
-            <!--<div class="swiper-slide">
-                <div class="banner bg-img" style="background-image: url(assets/images/banner/bg/noticia1.jpeg);">
-                    <div class="banner__one">
-                        <div class="container">
-                            <div class="banner__area">
-                                <div class="row">
-                                    <div class="col-xl-6 col-lg-9 col-12">
-                                        <div class="banner__content">
-                                            <h6>Noticia 1</h6>
-                                            <h2>Noticia 1</h2>
-                                            <div class="banner__btngroup">
-                                                <a href="#" class="lab-btn">noticia 1</a>
-                                                <a href="https://www.youtube.com/embed/YjhrligRTbE" data-rel="lightcase" class="video__btn">
-                                                    <i class="fa-solid fa-circle-play"></i>
-                                                    <span>How we work</span>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="banner bg-img" style="background-image: url(assets/images/banner/bg/noticia2.jpeg);">
-                    <div class="banner__one">
-                        <div class="container">
-                            <div class="banner__area">
-                                <div class="row justify-content-center">
-                                    <div class="col-xl-6 col-lg-9 col-12">
-                                        <div class="banner__content text-center">
-                                            <h6>Noticia 2</h6>
-                                            <h2>Noticia 2</h2>
-                                            <div class="banner__btngroup justify-content-center">
-                                                <a href="#" class="lab-btn">noticia 2</a>
-                                                <a href="https://www.youtube.com/embed/YjhrligRTbE" data-rel="lightcase" class="video__btn">
-                                                    <i class="fa-solid fa-circle-play"></i>
-                                                    <span>How we work</span>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>  -->
         </div>
     </div>
     <!-- ==========Banner Section Ends Here========== -->
@@ -1043,7 +968,7 @@
                                 <ul>
                                     <li>
                                         <div class="thumb">
-                                            <a href="blog-sing.html"><img src="assets/images/blog/recentpost/noticia1.jpeg" alt="recentpost" /></a>
+                                            <a href="blog-sing.html"><img src="assets/images/blog/recentpost/01.jpg" alt="recentpost" /></a>
                                         </div>
                                         <div class="content">
                                             <h6><a href="blog-single.html">Employe development is company’s</a></h6>
@@ -1052,7 +977,7 @@
                                     </li>
                                     <li>
                                         <div class="thumb">
-                                            <a href="blog-sing.html"><img src="assets/images/blog/recentpost/noticia2.jpeg" alt="recentpost" /></a>
+                                            <a href="blog-sing.html"><img src="assets/images/blog/recentpost/01.jpg" alt="recentpost" /></a>
                                         </div>
                                         <div class="content">
                                             <h6><a href="blog-single.html">Should fixing take 100  corporate steps.</a></h6>
@@ -1070,12 +995,12 @@
                             </div>
                             <div class="footer__wrapper">
                                 <ul>
-                                    <li><a href="assets/images/footer/gallery/noticia1.jpeg" data-rel="lightcase"><img src="assets/images/footer/gallery/noticia1.jpeg" alt="gallery thumb" /></a></li>
-                                    <li><a href="assets/images/footer/gallery/noticia2.jpeg" data-rel="lightcase"><img src="assets/images/footer/gallery/noticia2.jpeg" alt="gallery thumb" /></a></li>
-                                    <li><a href="assets/images/footer/gallery/noticia3.jpeg" data-rel="lightcase"><img src="assets/images/footer/gallery/noticia3.jpeg" alt="gallery thumb" /></a></li>
-                                    <li><a href="assets/images/footer/gallery/noticia4.jpeg" data-rel="lightcase"><img src="assets/images/footer/gallery/noticia4.jpeg" alt="gallery thumb" /></a></li>
-                                    <li><a href="assets/images/footer/gallery/noticia1.jpeg" data-rel="lightcase"><img src="assets/images/footer/gallery/noticia1.jpeg" alt="gallery thumb" /></a></li>
-                                    <li><a href="assets/images/footer/gallery/noticia2.jpeg" data-rel="lightcase"><img src="assets/images/footer/gallery/noticia2.jpeg" alt="gallery thumb" /></a></li>
+                                    <li><a href="assets/images/footer/gallery/01.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/01.jpg" alt="gallery thumb" /></a></li>
+                                    <li><a href="assets/images/footer/gallery/02.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/02.jpg" alt="gallery thumb" /></a></li>
+                                    <li><a href="assets/images/footer/gallery/01.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/01.jpg" alt="gallery thumb" /></a></li>
+                                    <li><a href="assets/images/footer/gallery/01.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/01.jpg" alt="gallery thumb" /></a></li>
+                                    <li><a href="assets/images/footer/gallery/01.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/01.jpg" alt="gallery thumb" /></a></li>
+                                    <li><a href="assets/images/footer/gallery/01.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/01.jpg" alt="gallery thumb" /></a></li>
                                 </ul>
                             </div>
                         </div>
