--- a/mapa_sitio.html
+++ b/mapa_sitio.html
@@ -278,12 +278,12 @@
                             </div>
                             <div class="footer__wrapper">
                                 <ul>
-                                    <li><a href="assets/images/footer/gallery/noticia1.jpeg" data-rel="lightcase"><img src="assets/images/footer/gallery/noticia1.jpeg" alt="gallery thumb" /></a></li>
-                                    <li><a href="assets/images/footer/gallery/noticia2.jpeg" data-rel="lightcase"><img src="assets/images/footer/gallery/noticia2.jpeg" alt="gallery thumb" /></a></li>
-                                    <li><a href="assets/images/footer/gallery/noticia3.jpeg" data-rel="lightcase"><img src="assets/images/footer/gallery/noticia3.jpeg" alt="gallery thumb" /></a></li>
-                                    <li><a href="assets/images/footer/gallery/noticia4.jpeg" data-rel="lightcase"><img src="assets/images/footer/gallery/noticia4.jpeg" alt="gallery thumb" /></a></li>
-                                    <li><a href="assets/images/footer/gallery/noticia1.jpeg" data-rel="lightcase"><img src="assets/images/footer/gallery/noticia1.jpeg" alt="gallery thumb" /></a></li>
-                                    <li><a href="assets/images/footer/gallery/noticia2.jpeg" data-rel="lightcase"><img src="assets/images/footer/gallery/noticia2.jpeg" alt="gallery thumb" /></a></li>
+                                    <li><a href="assets/images/footer/gallery/01.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/01.jpg" alt="gallery thumb" /></a></li>
+                                    <li><a href="assets/images/footer/gallery/02.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/02.jpg" alt="gallery thumb" /></a></li>
+                                    <li><a href="assets/images/footer/gallery/01.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/01.jpg" alt="gallery thumb" /></a></li>
+                                    <li><a href="assets/images/footer/gallery/01.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/01.jpg" alt="gallery thumb" /></a></li>
+                                    <li><a href="assets/images/footer/gallery/01.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/01.jpg" alt="gallery thumb" /></a></li>
+                                    <li><a href="assets/images/footer/gallery/01.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/01.jpg" alt="gallery thumb" /></a></li>
                                 </ul>
                             </div>
                         </div>
