--- a/noticias.html
+++ b/noticias.html
@@ -154,7 +154,7 @@
                                 <div class="blog__item">
                                     <div class="blog__inner">
                                         <div class="blog__thumb">
-                                            <a href="blog-single.html"><img src="assets/images/blog/noticia1.jpeg" alt="rajibraj" /></a>
+                                            <a href="blog-single.html"><img src="assets/images/blog/01.jpg" alt="rajibraj" /></a>
                                             <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april 2022</span>
                                         </div>
                                         <div class="blog__content">
@@ -175,7 +175,7 @@
                                 <div class="blog__item">
                                     <div class="blog__inner">
                                         <div class="blog__thumb">
-                                            <a href="blog-single.html"><img src="assets/images/blog/noticia2.jpeg" alt="rajibraj" /></a>
+                                            <a href="blog-single.html"><img src="assets/images/blog/01.jpg" alt="rajibraj" /></a>
                                             <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april 2022</span>
                                         </div>
                                         <div class="blog__content">
@@ -196,7 +196,7 @@
                                 <div class="blog__item">
                                     <div class="blog__inner">
                                         <div class="blog__thumb">
-                                            <a href="blog-single.html"><img src="assets/images/blog/noticia3.jpeg" alt="rajibraj" /></a>
+                                            <a href="blog-single.html"><img src="assets/images/blog/01.jpg" alt="rajibraj" /></a>
                                             <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april 2022</span>
                                         </div>
                                         <div class="blog__content">
@@ -217,7 +217,7 @@
                                 <div class="blog__item">
                                     <div class="blog__inner">
                                         <div class="blog__thumb">
-                                            <a href="blog-single.html"><img src="assets/images/blog/noticia4.jpeg" alt="rajibraj" /></a>
+                                            <a href="blog-single.html"><img src="assets/images/blog/01.jpg" alt="rajibraj" /></a>
                                             <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april 2022</span>
                                         </div>
                                         <div class="blog__content">
@@ -278,7 +278,7 @@
                                             <ul>
                                                 <li>
                                                     <div class="thumb">
-                                                        <a href="blog-single.html"><img src="assets/images/blog/recentpost/noticia3.jpeg" alt="rajibraj"></a>
+                                                        <a href="blog-single.html"><img src="assets/images/blog/recentpost/01.jpg" alt="rajibraj"></a>
                                                     </div>
                                                     <div class="content">
                                                         <h6><a href="blog-single.html">Consulting reportng qounc arei could more.</a></h6>
@@ -287,7 +287,7 @@
                                                 </li>
                                                 <li>
                                                     <div class="thumb">
-                                                        <a href="blog-single.html"><img src="assets/images/blog/recentpost/noticia4.jpeg" alt="rajibraj"></a>
+                                                        <a href="blog-single.html"><img src="assets/images/blog/recentpost/01.jpg" alt="rajibraj"></a>
                                                     </div>
                                                     <div class="content">
                                                         <h6><a href="blog-single.html">Find the right path for your group course online</a></h6>
@@ -296,7 +296,7 @@
                                                 </li>
                                                 <li>
                                                     <div class="thumb">
-                                                        <a href="blog-single.html"><img src="assets/images/blog/recentpost/noticia2.jpeg" alt="rajibraj"></a>
+                                                        <a href="blog-single.html"><img src="assets/images/blog/recentpost/01.jpg" alt="rajibraj"></a>
                                                     </div>
                                                     <div class="content">
                                                         <h6><a href="blog-single.html">Learn doing with real world projects other countries</a></h6>
@@ -305,7 +305,7 @@
                                                 </li>
                                                 <li>
                                                     <div class="thumb">
-                                                        <a href="blog-single.html"><img src="assets/images/blog/recentpost/noticia1.jpeg" alt="rajibraj"></a>
+                                                        <a href="blog-single.html"><img src="assets/images/blog/recentpost/01.jpg" alt="rajibraj"></a>
                                                     </div>
                                                     <div class="content">
                                                         <h6><a href="blog-single.html">Business ueporting rouncil them could plan.</a></h6>
@@ -459,12 +459,12 @@
                             </div>
                             <div class="footer__wrapper">
                                 <ul>
-                                    <li><a href="assets/images/footer/gallery/noticia1.jpeg" data-rel="lightcase"><img src="assets/images/footer/gallery/noticia1.jpeg" alt="gallery thumb" /></a></li>
-                                    <li><a href="assets/images/footer/gallery/noticia2.jpeg" data-rel="lightcase"><img src="assets/images/footer/gallery/noticia2.jpeg" alt="gallery thumb" /></a></li>
-                                    <li><a href="assets/images/footer/gallery/noticia3.jpeg" data-rel="lightcase"><img src="assets/images/footer/gallery/noticia3.jpeg" alt="gallery thumb" /></a></li>
-                                    <li><a href="assets/images/footer/gallery/noticia4.jpeg" data-rel="lightcase"><img src="assets/images/footer/gallery/noticia4.jpeg" alt="gallery thumb" /></a></li>
-                                    <li><a href="assets/images/footer/gallery/noticia1.jpeg" data-rel="lightcase"><img src="assets/images/footer/gallery/noticia1.jpeg" alt="gallery thumb" /></a></li>
-                                    <li><a href="assets/images/footer/gallery/noticia2.jpeg" data-rel="lightcase"><img src="assets/images/footer/gallery/noticia2.jpeg" alt="gallery thumb" /></a></li>
+                                    <li><a href="assets/images/footer/gallery/01.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/01.jpg" alt="gallery thumb" /></a></li>
+                                    <li><a href="assets/images/footer/gallery/02.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/02.jpg" alt="gallery thumb" /></a></li>
+                                    <li><a href="assets/images/footer/gallery/01.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/01.jpg" alt="gallery thumb" /></a></li>
+                                    <li><a href="assets/images/footer/gallery/01.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/01.jpg" alt="gallery thumb" /></a></li>
+                                    <li><a href="assets/images/footer/gallery/01.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/01.jpg" alt="gallery thumb" /></a></li>
+                                    <li><a href="assets/images/footer/gallery/01.jpg" data-rel="lightcase"><img src="assets/images/footer/gallery/01.jpg" alt="gallery thumb" /></a></li>
                                 </ul>
                             </div>
                         </div>
