--- a/productos.html
+++ b/productos.html
@@ -408,7 +408,7 @@
                                 <ul>
                                     <li>
                                         <div class="thumb">
-                                            <a href="blog-sing.html"><img src="assets/images/blog/recentpost/noticia1.jpeg" alt="recentpost" /></a>
+                                            <a href="blog-sing.html"><img src="assets/images/blog/recentpost/01.jpg" alt="recentpost" /></a>
                                         </div>
                                         <div class="content">
                                             <h6><a href="blog-single.html">Employe development is company’s</a></h6>
@@ -417,7 +417,7 @@
                                     </li>
                                     <li>
                                         <div class="thumb">
-                                            <a href="blog-sing.html"><img src="assets/images/blog/recentpost/noticia2.jpeg" alt="recentpost" /></a>
+                                            <a href="blog-sing.html"><img src="assets/images/blog/recentpost/01.jpg" alt="recentpost" /></a>
                                         </div>
                                         <div class="content">
                                             <h6><a href="blog-single.html">Should fixing take 100  corporate steps.</a></h6>
