--- a/mapa_sitio.html
+++ b/mapa_sitio.html
@@ -216,7 +216,7 @@
                             <div class="footer__title">
                                 <h5>Sabraplas</h5>
                             </div>
-                            <p>Enthusia drive accuratie users vas tha effective interface nergsticaly purse adaptive cores create rough effectve create nterface.  </p>
+                            <p>Fabricación de productos plásticos tales como mangas y bolsas plásticas</p>
                             <ul>
                                 <li><a href="https://wa.me/56991769218?text=Hola,%20quiero%20consultar%20los%20precios%20de%20los%20productos!"><i class="fa-brands fa-whatsapp"></i></a></li>
                                 <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
